:bug: Fix mobile overflow errors

--- a/src/sass/layouts/_stage.scss
+++ b/src/sass/layouts/_stage.scss
@@ -2,6 +2,9 @@
   overflow: hidden;
   font-size: 150%;
   font-weight: 400;
+  height: 100vh;
+  width: 100vw;
+  position: relative;
 }
 
 ._stage {
